# hermes-polymarket-executor-adapter

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  constraints-ci.txt  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPONENT_COMPATIBILITY.md  HERMES_PLUGIN.md  MCP_EVALUATION.md  PROGRESS.md  REVIEW.md  ROADMAP.md  SECURITY_BOUNDARIES.md
scripts/: check_hermes_profile_plugin.py  check_openapi_parity.py
src/hermes_polymarket_control/: __init__.py  cli.py  client.py  config.py  models.py  tools.py
src/hermes_polymarket_executor_adapter/: __init__.py  assistant_v0_contracts.py  assistant_v0_facade.py  assistant_v0_manifest_loader.py  client.py  config.py  hermes_handlers.py  hermes_plugin.py  hermes_schemas.py  models.py  tools.py
tests/: test_assistant_v0_contracts.py  test_assistant_v0_facade.py  test_assistant_v0_manifest_loader.py  test_cli.py  test_client.py  test_hermes_plugin.py  test_models.py  test_no_secret_boundary.py  test_openapi_parity.py  test_schema_contracts.py
