[project]
name = "hermes-polymarket-executor-adapter"
version = "0.28.0"
description = "Hermes-compatible executor adapter for a standalone Polymarket execution engine"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.13.3",
]

[project.optional-dependencies]
test = ["pytest>=9.0.2"]

[project.entry-points."hermes_agent.plugins"]
polymarket-executor = "hermes_polymarket_executor_adapter.hermes_plugin"

[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
